--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/instantiator": "1.0.5",
         "guzzlehttp/guzzle": "~6.0",
         "laravel/framework": "5.4.*",
+        "laravel/passport": "^4.0",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
