--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "doctrine/instantiator": "1.0.5",
         "guzzlehttp/guzzle": "~6.0",
+        "jenssegers/mongodb": "^3.2",
         "laravel/framework": "5.4.*",
         "laravel/passport": "^4.0",
         "laravel/tinker": "~1.0"
